--- a/requirements.txt
+++ b/requirements.txt
@@ -1,174 +1,5 @@
-aiohttp==3.8.0
-h5py
-aiosignal==1.2.0
-alabaster==0.7.12
-anyio==2.2.0
-appnope==0.1.2
-argon2-cffi==20.1.0
-astroid==2.5.2
-async-generator==1.10
-async-timeout==4.0.0
-asynctest==0.13.0
-attrs==21.2.0
-Automat==20.2.0
-Babel==2.9.1
-backcall==0.2.0
-bcrypt==3.2.0
-beautifulsoup4==4.10.0
-bleach==3.3.0
-brotlipy==0.7.0
-cached-property==1.5.2
-cachelib==0.4.1
-certifi==2021.10.8
-cffi==1.14.5
-chardet==4.0.0
-charset-normalizer==2.0.7
-click==8.0.3
-cloudpickle==1.6.0
-colorama==0.4.4
-constantly==15.1.0
-cryptography==3.4.7
-cssselect==1.1.0
-cycler==0.10.0
-dataframe-image==0.1.1
-decorator==5.0.9
-defusedxml==0.7.1
-dill==0.3.3
-dlx==1.0.4
-docplex==2.15.194
-docutils==0.17.1
-entrypoints==0.3
-fastdtw==0.3.4
-fastjsonschema==2.15.1
-Flask==2.0.2
-Flask-Session==0.4.0
-frozenlist==1.2.0
-hyperlink==21.0.0
-idna==2.10
-imagesize==1.2.0
-importlib-metadata==3.10.0
-incremental==17.5.0
-inflection==0.5.1
-iniconfig==1.1.1
-ipykernel==5.3.4
-ipython==7.22.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-isort==5.8.0
-itemadapter==0.3.0
-itsdangerous==2.0.1
-jedi==0.17.0
-Jinja2==3.0.0
-joblib==1.0.1
-json5==0.9.5
-jsonschema==3.2.0
-keyring==23.0.1
-kiwisolver==1.3.1
-lazy-object-proxy==1.6.0
-lxml==4.6.3
-MarkupSafe==2.0.1
-matplotlib==3.3.4
-mccabe==0.6.1
-mistune==0.8.4
-more-itertools==8.8.0
-mpmath==1.2.1
-multidict==5.2.0
-multitasking==0.0.9
-nbclassic==0.2.6
-nbclient==0.5.3
-nbconvert==6.0.7
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.0
-ntlm-auth==1.5.0
-numpy
-numpydoc
-olefile==0.46
-packaging==20.9
+flask
+qiskit
 pandas
-pandocfilters==1.4.3
-parsel==1.5.2
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.2.0
-pluggy==0.13.1
-ply==3.11
-prometheus-client==0.10.1
-prompt-toolkit==3.0.17
-psutil==5.8.0
-ptyprocess==0.7.0
-py==1.10.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pybind11==2.6.2
-pycodestyle==2.7.0
-pycparser==2.20
-PyDispatcher==2.0.5
-pydot==1.4.2
-pyflakes==2.3.1
-Pygments==2.9.0
-PyHamcrest==2.0.2
-pylatexenc==2.10
-pylint==2.7.4
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-pyrsistent==0.17.3
-PySocks==1.7.1
-pytest==6.2.4
-pytest-runner==5.3.1
-python-constraint==1.4.0
-python-dateutil==2.8.1
-pytz==2021.1
-pyzmq==20.0.0
-qiskit==0.26.2
-qiskit-aer==0.8.2
-qiskit-aqua==0.9.1
-qiskit-ibmq-provider==0.13.1
-qiskit-ignis==0.6.0
-qiskit-terra==0.17.4
-Quandl==3.6.0
-queuelib==1.5.0
-requests==2.25.1
-requests-ntlm==1.1.0
-retworkx==0.8.0
-rope==0.18.0
-Scrapy==2.4.1
-seaborn==0.11.1
-Send2Trash==1.5.0
-service-identity==18.1.0
-setuptools==52.0.0
-six==1.15.0
-sniffio==1.2.0
-snowballstemmer==2.1.0
-soupsieve==2.3
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-sympy==1.7.1
-terminado==0.9.4
-testpath==0.4.4
-threadpoolctl==2.1.0
-toml==0.10.2
-tornado==6.1
-traitlets==5.0.5
-Twisted==21.2.0
-typed-ast==1.4.2
-typing-extensions==3.7.4.3
-urllib3==1.26.4
-w3lib==1.21.0
-wcwidth==0.2.5
-webencodings==0.5.1
-websockets==9.0.2
-Werkzeug==2.0.2
-wheel==0.36.2
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-wurlitzer==2.1.0
-yarl==1.7.2
-yfinance==0.1.55
-zipp==3.4.1
-zope.interface==5.4.0
+numpy
+matplotlib
